--- a/biblioteca/pom.xml
+++ b/biblioteca/pom.xml
@@ -4,6 +4,20 @@
   <artifactId>biblioteca</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  <dependencies>
+			<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>8.0.29</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.postgresql</groupId>
+				<artifactId>postgresql</artifactId>
+				<version>42.2.14</version>
+			</dependency>
+		</dependencies>
   <build>
     <plugins>
       <plugin>
